# rexer

./: .gitignore  .gitmodules  .testenv.rc.swp  README.md  bash.rc  devenv.rc  devenv_temp.rc  keys.txt  local_bridge.rc  local_bridge.sh  local_console.sh  local_server.sh  local_server_grpc.sh  pyproject.toml  setup_local_bridge.sh  shell.nix  testall.py  teste2e.py  testenv.rc
.circleci/: config.yml
.github/workflows/: ci_test_suite.yml  e2etests.yml  e2etests_pip.yml  e2etests_staging.yml  golangci.yaml  integration_linux.yml  jslint.yml  main.yml  prune_test_resources.yml  pulumi.yml  (+3 more)
cassandra/: stateful.yaml  storageclass.yaml
clientapp/: package-lock.json  package.json  webpack.config.js
console/: package-lock.json  package.json
demo/: api_demo.ipynb
dockerfiles/: README.md  apiserver.dockerfile  bridge.dockerfile  bridge_arm64.dockerfile  controlserver.dockerfile  countaggr.dockerfile  countaggr_arm64.dockerfile  counters-cleanup.dockerfile  counters-cleanup_arm64.dockerfile  http.dockerfile  http_arm64.dockerfile  http_multiarch.dockerfile  model_monitoring.dockerfile  nitrous.dockerfile  nitrous_arm64.dockerfile  traffic_capture.dockerfile
e2etests/: feature_logging.py  lib.py  model  pyproject.toml  run_local.py  run_local_grpc.py  teste2e.py  teste2e_staging.py
engine/: Cargo.toml  go.mod  main.go
kengine/: .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
proto/: README.md  action.proto  aggregate.proto  aggregate_delta.proto  ast.proto  billing.proto  connector.proto  counter.proto  feature.proto  ftypes.proto  generate.sh  gogo.proto  nitrous.capnp  nitrous.proto  nitrous_old.proto  profile.proto  query.proto  types.proto  usage.proto  value.capnp  value.proto  value.schema
pyclient/: __init__.py  _expr.py  action.py  app.py  counter.py  createActionLog.py  createProfileLog.py  expr.py  loadtester.py  pyproject.toml  test_value.py  tests.py  value.py  visitor.py
pyclient/client/: __init__.py  test_client.py
pyclient/loadtests/: actionLog
pyclient/models/: action.py  aggregate.py  counter.py  profile.py  test_value.py  value.py
pyclient/query/: __init__.py  expr.py  tests.py  to_proto.py  visitor.py
pyclient/rql/: __init__.py  expr.py  serializer.py  tests.py  to_proto.py  visitor.py
pyclient/tests/: actionLog  actionLogFile  actionLogFileSmall  actionLogSmall  profileGets  profileSets
pyconsole/: app.py  createActionLog.py  createProfileLog.py  loadtester.py  pyproject.toml
pyconsole/demo/: api_demo.ipynb
pyconsole/demo/.ipynb_checkpoints/: api_demo-checkpoint.ipynb
pyconsole/loadtests/: profileSets
pyspark/: cf.py  topk.py
rustengine/: Cargo.toml
tools/: aws_glue_parquet_transform.py  half-closed.sh  lokal_profile_backfill.py  matplotlib_viz.py  pyproject.toml  speedscope_trace.json  t_106_featurelog+0+0000030001.json  trace.json  trace_visualizer.py  training_data_generation.py  version_e2etests.py
tools/t_106_featurelog+0+0000030001.parquet/: .part-00000-e5e92d13-6729-4de7-848f-d758d7ba97b1-c000.snappy.parquet.crc  part-00000-e5e92d13-6729-4de7-848f-d758d7ba97b1-c000.snappy.parquet
web/: package.json
webapp/: .eslintignore  .eslintrc.js  declarations.d.ts  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js
(+1447 files in other folders)
