[tool.poetry]
name = "e2etests"
version = "0.1.0"
description = ""
authors = ["Mohit Reddy <mohitreddy1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

# If this fails, you might need to setup ssh access to github.
# See: https://docs.github.com/en/authentication/connecting-to-github-with-ssh
rexerclient = { git = "ssh://git@github.com/fennel-ai/rexer-pyclient-alpha.git", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
