[tool.poetry]
name = "pyclient"
version = "0.1.0"
description = ""
authors = ["Nikhil Garg <nikhil@fennel.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
munch = "^2.5.0"
protobuf = "^3.19.1"
requests = "^2.27.1"
httpretty = "^1.1.4"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
urllib3 = "^1.26.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
