[tool.poetry]
name = "pyconsole"
version = "0.1.0"
description = ""
authors = ["Nikhil Garg <nikhil@fennel.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.19.1"
requests = "^2.27.1"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
urllib3 = "^1.26.8"
absl-py = "^1.0.0"
# If this fails, you might need to setup ssh access to github.
# See: https://docs.github.com/en/authentication/connecting-to-github-with-ssh
rexerclient = { git = "ssh://git@github.com/fennel-ai/rexer-pyclient-alpha.git", branch = "main" }
jupyterlab = "^3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
