[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Mohit Reddy <mohitreddy1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.12"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
