[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Mohit Reddy <mohitreddy1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pandas = "^1.4.1"
boto3 = "^1.21.12"
tqdm = "^4.63.1" 
# If this fails, you might need to setup ssh access to github.
# See: https://docs.github.com/en/authentication/connecting-to-github-with-ssh
rexerclient = { git = "ssh://git@github.com/fennel-ai/rexer-pyclient-alpha.git", branch = "main" }
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
